<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/banner"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo_joke"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/logo_flower"
                android:layout_toEndOf="@id/logo_joke"
                android:gravity="end"
                android:orientation="vertical"
                android:textAlignment="gravity">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_by_text"
                    android:textColor="@color/text_blur"
                    android:textSize="11sp"
                    tools:text="@string/create_by_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_create_text"
                    android:textColor="@color/text_bold"
                    android:textSize="12sp"
                    tools:text="@string/user_create_text" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/logo_flower"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@null"
                android:src="@drawable/img_flower" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_joke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/title_joke_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="@string/title_joke_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sub_title_joke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/sub_title_joke_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@string/sub_title_joke_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textColor="@color/text_bold"
            app:constraint_referenced_ids="banner"
            app:layout_constraintBottom_toTopOf="@id/guideline_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            tools:ignore="RtlCompat"
            tools:text="@string/content_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/describe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_1">

            <Button
                android:id="@+id/btn_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/btn_like_text"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dislike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:text="@string/btn_dislike_text"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_group">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/text_describe"
                android:layout_marginVertical="5dp"
                android:background="@color/line_spacing" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/copyRight"
                android:layout_marginHorizontal="10dp"
                android:text="@string/describe_text"
                android:textAlignment="center"
                android:textColor="@color/text_blur"
                android:textSize="12sp"
                tools:text="@string/describe_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/copyRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginVertical="10dp"
                android:text="@string/copyright_text"
                android:textAlignment="center"
                android:textColor="@color/text_bold"
                tools:text="@string/copyright_text" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>